--- a/d3-chart/grouped-bar/css.css
+++ b/d3-chart/grouped-bar/css.css
@@ -1,23 +1,34 @@
 body {
     font: 10px sans-serif;
 }
-
 .axis path,
 .axis line {
     fill: none;
     stroke: #000;
     shape-rendering: crispEdges;
 }
-
 .bar {
     fill: steelblue;
 }
-
 .x.axis path {
     display: none;
 }
 
-.x.axis .tick text {
-    text-anchor: start!important;
+.group-item {
+    display: block;
+    margin-bottom: 5px;
 }
-
+.group-item-color {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    background: #666;
+    float: left;
+}
+.group-item-label {
+    padding: 0;
+    margin: 0;
+    margin-left: 5px;
+    line-height: 20px;
+    word-break: break-all;
+}
