--- a/d3-chart/grouped-bar/css.css
+++ b/d3-chart/grouped-bar/css.css
@@ -3,6 +3,9 @@
     width: 100%;
     font: 10px sans-serif;
 }
+.chart-bar #chart-bar-title {
+    text-align: center;
+}
 .chart-bar tr td {
     vertical-align: top;
 }
